Removed Todos, Login screen changes, blogger dash changes

--- a/MyCity4Kids/MyCity4Kids/res/layout/aa_mc4k_home.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/aa_mc4k_home.xml
@@ -28,6 +28,94 @@
 
 
                 <LinearLayout
+                    android:id="@+id/blogss"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/white_color"
+                    android:orientation="vertical">
+
+                    <LinearLayout
+
+                        android:id="@+id/blogHeader"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="#ce92d8"
+                        android:orientation="horizontal"
+                        android:weightSum="1">
+
+
+                        <ImageView
+                            android:id="@+id/img_go_to_blogs"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical"
+                            android:layout_weight=".2"
+                            android:src="@drawable/blog_listxxhdpi" />
+
+                        <TextView
+                            android:id="@+id/txtBlogs"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical"
+                            android:layout_weight=".8"
+                            android:paddingBottom="10dp"
+                            android:paddingTop="10dp"
+                            android:text="Trending Blogs"
+                            android:textAppearance="?android:attr/textAppearanceMedium"
+                            android:textColor="@color/white_color"
+                            android:textStyle="bold" />
+
+
+                    </LinearLayout>
+
+
+                    <ProgressBar
+                        android:id="@+id/blogprogressbar"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:visibility="gone" />
+
+                    <TextView
+                        android:id="@+id/no_blog"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal"
+                        android:padding="2dp"
+                        android:text="No Blogs Listed"
+                        android:textColor="@color/grey"
+                        android:textSize="12dp"
+                        android:visibility="gone" />
+
+
+                    <com.mycity4kids.widget.CustomListView
+                        android:id="@+id/bloglist"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:divider="@color/dividercolor"
+                        android:dividerHeight="0.3dp" />
+
+                    <TextView
+                        android:id="@+id/go_to_blog"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:padding="15dp"
+                        android:text="@string/home_goto_blog"
+                        android:textColor="@color/home_light_blue"
+                        android:textStyle="bold" />
+
+                </LinearLayout>
+
+            </android.support.v7.widget.CardView>
+
+            <android.support.v7.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp"
+                android:layout_marginTop="5dp">
+
+
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@color/white_color"
@@ -119,171 +207,83 @@
                 </LinearLayout>
             </android.support.v7.widget.CardView>
 
-            <android.support.v7.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="5dp"
-                android:layout_marginRight="5dp"
-                android:layout_marginTop="5dp">
+            <!--<android.support.v7.widget.CardView-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_marginLeft="5dp"-->
+            <!--android:layout_marginRight="5dp"-->
+            <!--android:layout_marginTop="5dp">-->
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@color/white_color"
-                    android:orientation="vertical">
-
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:background="@color/home_green"
-                        android:orientation="horizontal"
-                        android:weightSum="1">
+            <!--<LinearLayout-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:background="@color/white_color"-->
+            <!--android:orientation="vertical">-->
 
 
-                        <ImageView
-                            android:id="@+id/img_go_to_todo"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_vertical"
-                            android:layout_weight=".2"
-                            android:src="@drawable/note_3d_listhdpi" />
-
-                        <TextView
-                            android:id="@+id/txtTodo"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_vertical"
-                            android:layout_weight=".7"
-                            android:paddingBottom="10dp"
-                            android:paddingTop="10dp"
-                            android:text="To Do"
-                            android:textAppearance="?android:attr/textAppearanceMedium"
-                            android:textColor="@color/white_color"
-                            android:textStyle="bold" />
-
-                        <ImageView
-                            android:id="@+id/add_task"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_vertical"
-                            android:layout_weight=".1"
-                            android:padding="5dp"
-                            android:src="@drawable/attachment" />
-
-                    </LinearLayout>
-
-                    <com.mycity4kids.widget.CustomListView
-                        android:id="@+id/home_taskList"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:divider="@color/dividercolor"
-                        android:dividerHeight="0.3dp" />
-
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="1dp"
-                        android:background="@color/home_bg" />
-
-                    <TextView
-                        android:id="@+id/go_to_task"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:padding="15dp"
-                        android:text="@string/home_goto_todo"
-                        android:textColor="@color/home_light_blue"
-                        android:textStyle="bold" />
-
-                </LinearLayout>
-            </android.support.v7.widget.CardView>
-
-            <android.support.v7.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="5dp"
-                android:layout_marginRight="5dp"
-                android:layout_marginTop="5dp">
+            <!--<LinearLayout-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:background="@color/home_green"-->
+            <!--android:orientation="horizontal"-->
+            <!--android:weightSum="1">-->
 
 
-                <LinearLayout
-                    android:id="@+id/blogss"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@color/white_color"
-                    android:orientation="vertical">
+            <!--<ImageView-->
+            <!--android:id="@+id/img_go_to_todo"-->
+            <!--android:layout_width="0dp"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_gravity="center_vertical"-->
+            <!--android:layout_weight=".2"-->
+            <!--android:src="@drawable/note_3d_listhdpi" />-->
 
-                    <LinearLayout
+            <!--<TextView-->
+            <!--android:id="@+id/txtTodo"-->
+            <!--android:layout_width="0dp"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_gravity="center_vertical"-->
+            <!--android:layout_weight=".7"-->
+            <!--android:paddingBottom="10dp"-->
+            <!--android:paddingTop="10dp"-->
+            <!--android:text="To Do"-->
+            <!--android:textAppearance="?android:attr/textAppearanceMedium"-->
+            <!--android:textColor="@color/white_color"-->
+            <!--android:textStyle="bold" />-->
 
-                        android:id="@+id/blogHeader"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:background="#ce92d8"
-                        android:orientation="horizontal"
-                        android:weightSum="1">
+            <!--<ImageView-->
+            <!--android:id="@+id/add_task"-->
+            <!--android:layout_width="0dp"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_gravity="center_vertical"-->
+            <!--android:layout_weight=".1"-->
+            <!--android:padding="5dp"-->
+            <!--android:src="@drawable/attachment" />-->
 
+            <!--</LinearLayout>-->
 
-                        <ImageView
-                            android:id="@+id/img_go_to_blogs"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_vertical"
-                            android:layout_weight=".2"
-                            android:src="@drawable/blog_listxxhdpi" />
+            <!--<com.mycity4kids.widget.CustomListView-->
+            <!--android:id="@+id/home_taskList"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:divider="@color/dividercolor"-->
+            <!--android:dividerHeight="0.3dp" />-->
 
-                        <TextView
-                            android:id="@+id/txtBlogs"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_vertical"
-                            android:layout_weight=".8"
-                            android:paddingBottom="10dp"
-                            android:paddingTop="10dp"
-                            android:text="Trending Blogs"
-                            android:textAppearance="?android:attr/textAppearanceMedium"
-                            android:textColor="@color/white_color"
-                            android:textStyle="bold" />
+            <!--<View-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="1dp"-->
+            <!--android:background="@color/home_bg" />-->
 
+            <!--<TextView-->
+            <!--android:id="@+id/go_to_task"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:padding="15dp"-->
+            <!--android:text="@string/home_goto_todo"-->
+            <!--android:textColor="@color/home_light_blue"-->
+            <!--android:textStyle="bold" />-->
 
-                    </LinearLayout>
-
-
-                    <ProgressBar
-                        android:id="@+id/blogprogressbar"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:visibility="gone" />
-
-                    <TextView
-                        android:id="@+id/no_blog"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal"
-                        android:padding="2dp"
-                        android:text="No Blogs Listed"
-                        android:textColor="@color/grey"
-                        android:textSize="12dp"
-                        android:visibility="gone" />
-
-
-                    <com.mycity4kids.widget.CustomListView
-                        android:id="@+id/bloglist"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:divider="@color/dividercolor"
-                        android:dividerHeight="0.3dp" />
-
-                    <TextView
-                        android:id="@+id/go_to_blog"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:padding="15dp"
-                        android:text="@string/home_goto_blog"
-                        android:textColor="@color/home_light_blue"
-                        android:textStyle="bold" />
-
-                </LinearLayout>
-
-            </android.support.v7.widget.CardView>
+            <!--</LinearLayout>-->
+            <!--</android.support.v7.widget.CardView>-->
 
             <android.support.v7.widget.CardView
                 android:id="@+id/eventsss"
