--- a/MyCity4Kids/MyCity4Kids/res/layout/activity_blogger_dashboard.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/activity_blogger_dashboard.xml
@@ -32,6 +32,7 @@
         android:layout_alignTop="@+id/bloggerImageView"
         android:layout_marginTop="14dp"
         android:text="Name"
+        android:textColor="@color/dashboard.bloggername"
         android:textSize="22sp" />
 
     <TextView
@@ -43,7 +44,8 @@
         android:layout_toRightOf="@+id/bloggerImageView"
         android:drawableLeft="@drawable/ic_trending"
         android:drawablePadding="2dp"
-        android:text="0" />
+        android:text="0"
+        android:textColor="@color/dashboard.stats" />
 
     <View
         android:id="@+id/vSeparator1"
@@ -64,7 +66,8 @@
         android:layout_toRightOf="@+id/vSeparator1"
         android:drawableLeft="@drawable/ic_views"
         android:drawablePadding="2dp"
-        android:text="0" />
+        android:text="0"
+        android:textColor="@color/dashboard.stats" />
 
     <View
         android:id="@+id/vSeparator2"
@@ -85,7 +88,8 @@
         android:layout_toRightOf="@+id/vSeparator2"
         android:drawableLeft="@drawable/ic_followers"
         android:drawablePadding="2dp"
-        android:text="0" />
+        android:text="0"
+        android:textColor="@color/dashboard.stats" />
 
 
     <View
@@ -108,8 +112,8 @@
         app:tabIndicatorColor="@color/login_grey"
         app:tabIndicatorHeight="3dp"
         app:tabMode="fixed"
-        app:tabSelectedTextColor="#1b51e6"
-        app:tabTextColor="@color/login_grey"
+        app:tabSelectedTextColor="@color/dashboard.selectedTabText"
+        app:tabTextColor="@color/dashboard.bloggername"
         app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <View
@@ -125,7 +129,9 @@
         android:id="@+id/separator2"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_below="@+id/sliding_tabs" />
+        android:layout_below="@+id/sliding_tabs"
+        android:layout_marginTop="2dp"
+        android:background="@color/login_grey" />
 
     <android.support.v4.view.ViewPager
         android:id="@+id/viewpager"
