--- a/MyCity4Kids/MyCity4Kids/res/layout/activity_blogger_dashboard.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/activity_blogger_dashboard.xml
@@ -109,7 +109,7 @@
         android:fillViewport="false"
         app:layout_collapseMode="pin"
         app:tabGravity="fill"
-        app:tabIndicatorColor="@color/login_grey"
+        app:tabIndicatorColor="@color/dashboard.selectedTabText"
         app:tabIndicatorHeight="3dp"
         app:tabMode="fixed"
         app:tabSelectedTextColor="@color/dashboard.selectedTabText"
@@ -129,9 +129,7 @@
         android:id="@+id/separator2"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_below="@+id/sliding_tabs"
-        android:layout_marginTop="2dp"
-        android:background="@color/login_grey" />
+        android:layout_below="@+id/sliding_tabs" />
 
     <android.support.v4.view.ViewPager
         android:id="@+id/viewpager"
