--- a/MyCity4Kids/MyCity4Kids/res/layout/aa_fragment_article_new.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/aa_fragment_article_new.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -30,10 +30,10 @@
     <android.support.v4.view.ViewPager
         android:id="@+id/viewpager"
         android:layout_width="match_parent"
-        android:layout_height="0px"
-        android:layout_weight="1"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/sliding_tabs"
         android:background="@android:color/white" />
-   <!-- <ImageView
+    <ImageView
         android:id="@+id/addDraft"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -41,6 +41,6 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:padding="10dp"
-        android:src="@drawable/add_draft" />-->
+        android:src="@drawable/add_draft" />
 
-</LinearLayout>
+</RelativeLayout>
