--- a/MyCity4Kids/MyCity4Kids/res/layout/article_image_tag_publish.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/article_image_tag_publish.xml
@@ -33,7 +33,7 @@
         android:layout_marginRight="10dp"
         android:layout_below="@id/textMessage"
         android:src="@drawable/default_article"
-        android:scaleType="fitXY"
+        android:scaleType="center"
         />
 
 
