--- a/MyCity4Kids/MyCity4Kids/res/layout/blog_page.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/blog_page.xml
@@ -32,7 +32,7 @@
         android:text="Set up your blog, introduce yourself and voila, you're ready to create your first blog post"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:textSize="20sp"
+        android:textSize="18sp"
         android:textColor="@color/welcome_pink"
         android:layout_gravity="center"
         android:gravity="center"
@@ -56,7 +56,7 @@
         android:id="@+id/blogImage"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:scaleType="fitXY"
+        android:scaleType="center"
         android:layout_below="@id/blogTitle"
         android:src="@drawable/default_blogger"
         android:layout_marginTop="10dp"
