--- a/MyCity4Kids/MyCity4Kids/res/layout/aa_loginform.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/aa_loginform.xml
@@ -23,7 +23,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="?attr/colorPrimary"
-                android:minHeight="?attr/actionBarSize">
+                android:contentInsetLeft="30dp"
+                android:contentInsetStart="30dp"
+                android:minHeight="?attr/actionBarSize"
+                app:contentInsetLeft="30dp"
+                app:contentInsetStart="30dp">
 
             </android.support.v7.widget.Toolbar>
 
@@ -252,7 +256,6 @@
                     android:id="@+id/forgot_password"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:enabled="false"
                     android:paddingBottom="20dp"
                     android:paddingTop="10dp"
                     android:text="@string/forgot_txt"
