--- a/MyCity4Kids/MyCity4Kids/res/layout/published_articles_item.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/published_articles_item.xml
@@ -75,7 +75,15 @@
                     android:textSize="14sp" />
 
             </LinearLayout>
-
+            <ImageView
+                android:id="@+id/img_menu"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_alignParentRight="true"
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="10dp"
+                android:padding="10dp"
+                android:src="@drawable/ic_more_vert_black_24dp" />
         </RelativeLayout>
 
     </LinearLayout>
