--- a/MyCity4Kids/MyCity4Kids/res/layout/draft_list_item.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/draft_list_item.xml
@@ -31,12 +31,13 @@
                 android:ellipsize="end"
                 android:fontFamily="sans-serif-medium"
                 android:gravity="top"
-                android:maxLines="3"
+                android:maxLines="2"
                 android:paddingLeft="10dp"
                 android:singleLine="false"
                 android:text="@string/title"
                 android:textColor="@color/black_color"
-                android:textSize="20dp" />
+                android:textSize="20dp"
+                android:layout_marginRight="30dp"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -44,24 +45,38 @@
                 android:layout_alignParentBottom="true"
                 android:layout_gravity="bottom"
                 android:gravity="bottom"
-                android:weightSum="1">
+                >
 
 
                 <TextView
                     android:id="@+id/txvPublishDate"
-                    android:layout_width="0dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentBottom="true"
                     android:layout_alignParentRight="true"
-                    android:layout_weight=".4"
+
                     android:fontFamily="sans-serif"
                     android:gravity="left"
                     android:layout_gravity="bottom"
                     android:singleLine="true"
                     android:text="@string/article_publish_date"
                     android:textColor="@color/gray2"
-                    android:textSize="12dp" />
+                    android:textSize="12dp"
+                    android:paddingLeft="10dp"/>
+                <TextView
+                    android:id="@+id/unapproved"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="12dp"
+                    android:text="UNAPPROVED"
+                    android:paddingRight="19dp"
+                    android:layout_below="@+id/img_menu"
+                    android:textColor="@color/blue_color"
+                    android:gravity="right"
 
+
+
+                    />
             </LinearLayout>
             <ImageView
                 android:id="@+id/img_menu"
@@ -72,6 +87,8 @@
                 android:layout_marginLeft="10dp"
                 android:padding="10dp"
                 android:src="@drawable/ic_more_vert_black_24dp" />
+
+
         </RelativeLayout>
 
     </LinearLayout>
