--- a/MyCity4Kids/MyCity4Kids/res/layout/activity_blogger_dashboard.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/activity_blogger_dashboard.xml
@@ -138,4 +138,13 @@
         android:layout_height="match_parent"
         android:layout_alignParentBottom="true"
         android:layout_below="@+id/separator2" />
+    <ImageView
+        android:id="@+id/addDraft"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:padding="10dp"
+        android:src="@drawable/add_draft" />
 </RelativeLayout>
