--- a/MyCity4Kids/MyCity4Kids/res/layout/blog_list_item.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/blog_list_item.xml
@@ -2,55 +2,99 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:paddingBottom="10dp">
+    android:clipToPadding="false"
+    android:paddingBottom="5dp"
+    android:paddingLeft="10dp"
+    android:paddingRight="10dp"
+    android:paddingTop="5dp">
 
-    <include
-        android:id="@+id/common_block"
-        layout="@layout/blog_common_header_item" />
-
-    <LinearLayout
-        android:id="@+id/article_block"
+    <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:background="#E0E3E9"
-        android:paddingLeft="1dp"
-        android:paddingRight="1dp"
-        android:paddingBottom="1.8dp"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
 
-        <LinearLayout
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:background="@color/white_color"
-            android:paddingBottom="10dp"
-            android:paddingTop="5dp">
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="5dp"
-                android:text="Recent Articles:"
-                android:textColor="@color/black_color"
-                android:textStyle="bold" />
+            <include
+                android:id="@+id/common_block"
+                layout="@layout/new_blog_common_header_item" />
 
             <LinearLayout
-                android:id="@+id/recent_article_frame"
+                android:id="@+id/article_block"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="3dp"
-                android:orientation="vertical">
+                android:background="@color/white_color"
+                android:orientation="vertical"
+                android:paddingBottom="2dp"
+                android:paddingLeft="1dp"
+                android:paddingRight="1dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/white_color"
+                    android:orientation="vertical"
+                    android:paddingBottom="10dp"
+                    android:paddingTop="5dp">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:padding="5dp"
+                        android:text="Recent Articles:"
+                        android:textColor="@color/black_color"
+                        android:textSize="16sp" />
+
+                    <LinearLayout
+                        android:id="@+id/recent_article_frame"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="3dp"
+                        android:orientation="vertical">
+
+
+                    </LinearLayout>
+
+
+                </LinearLayout>
 
 
             </LinearLayout>
 
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:background="@color/grey_light" />
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/white_color"
+                android:gravity="center_vertical"
+                android:paddingBottom="12dp"
+                android:paddingTop="12dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:drawableLeft="@drawable/ic_followers"
+                    android:drawablePadding="10dp"
+                    android:paddingLeft="10dp"
+                    android:text="215" />
+
+                <TextView
+                    android:id="@+id/blog_follow_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginRight="10dp"
+                    android:text="FOLLOW"
+                    android:textColor="@color/blog.comments.follow_reply_btn" />
+
+            </RelativeLayout>
 
         </LinearLayout>
-
-
-    </LinearLayout>
-
+    </android.support.v7.widget.CardView>
 </LinearLayout>
