--- a/MyCity4Kids/MyCity4Kids/res/layout/custom_comment_cell.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/custom_comment_cell.xml
@@ -1,106 +1,156 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/inner_comment_view"
-    android:layout_width="fill_parent"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_gravity="center"
-    android:background="@color/transparent"
-    android:elevation="3dp"
-    card_view:contentPadding="2dp">
+    android:background="@color/white_color">
+
 
     <RelativeLayout
+        android:id="@+id/relativeMainContainer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/transparent">
+        android:paddingBottom="4dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:paddingTop="8dp">
 
 
-        <RelativeLayout
-            android:id="@+id/relativeMainContainer"
+        <com.mikhaellopez.circularimageview.CircularImageView
+            android:id="@+id/network_img"
+            android:layout_width="54dp"
+            android:layout_height="54dp"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
+            android:contentDescription="@string/author_img"
+            android:src="@drawable/default_commentor_img"
+            android:visibility="visible"
+            app:civ_border="false"
+            app:civ_shadow="true"
+            app:civ_shadow_color="@color/grey"
+            app:civ_shadow_radius="4" />
+
+
+        <TextView
+            android:id="@+id/txvCommentTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@+id/network_img"
+            android:ellipsize="end"
+            android:maxLines="2"
+            android:paddingLeft="8dp"
+            android:singleLine="false"
+            android:text="@string/title"
+            android:textColor="@color/black_color"
+            android:textSize="17sp" />
+
+        <TextView
+            android:id="@+id/txvDate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/txvCommentTitle"
+            android:layout_alignStart="@+id/txvCommentTitle"
+            android:layout_below="@+id/txvCommentTitle"
+            android:fontFamily="sans-serif-thin"
+            android:paddingLeft="8dp"
+            android:text="date"
+            android:textColor="@color/blog.comments.date_comment_text"
+            android:textSize="14sp" />
+
+        <TextView
+            android:id="@+id/txvCommentDescription"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/white_color"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
-            android:paddingTop="5dp">
+            android:layout_alignLeft="@+id/txvCommentTitle"
+            android:layout_alignStart="@+id/txvCommentTitle"
+            android:layout_below="@id/network_img"
+            android:ellipsize="end"
+            android:fontFamily="sans-serif-thin"
+            android:paddingLeft="8dp"
+            android:singleLine="false"
+            android:textColor="@color/black_color"
+            android:textSize="14sp" />
 
-            <RelativeLayout
-                android:id="@+id/imvAuthorThumbContainer"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:gravity="center">
-
-                <ImageView
-                    android:id="@+id/network_img"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentTop="true"
-                    android:contentDescription="@string/author_img"
-                    android:src="@drawable/default_img"
-                    android:visibility="visible" />
-
-
-            </RelativeLayout>
-
-            <TextView
-                android:id="@+id/txvCommentTitle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_toRightOf="@+id/imvAuthorThumbContainer"
-                android:ellipsize="end"
-                android:maxLines="2"
-                android:paddingLeft="4dp"
-                android:singleLine="false"
-                android:text="@string/title"
-                android:textColor="@color/black_color"
-                android:textSize="14dp" />
-
-            <TextView
-                android:id="@+id/txvDate"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignLeft="@+id/txvCommentTitle"
-                android:layout_alignStart="@+id/txvCommentTitle"
-                android:layout_below="@+id/txvCommentTitle"
-                android:paddingLeft="4dp"
-                android:text="datasssss"
-                android:textColor="@color/grey"
-                android:textSize="13dp" />
-
-            <TextView
-                android:id="@+id/txvCommentDescription"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/imvAuthorThumbContainer"
-                android:layout_marginTop="2dp"
-                android:ellipsize="end"
-                android:singleLine="false"
-                android:textAlignment="textEnd"
-                android:textColor="@color/black_color"
-                android:textSize="13dp" />
-
-            <TextView
-                android:id="@+id/txvReply"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_below="@id/txvCommentDescription"
-                android:padding="5dp"
-                android:text="REPLY"
-                android:textColor="@color/header_color"
-                android:textSize="14dp" />
-
-
-        </RelativeLayout>
-
-        <View
-            android:id="@+id/dividerLine"
-            android:layout_width="match_parent"
-            android:layout_height="3dp"
-            android:layout_below="@+id/relativeMainContainer"
-            android:background="@color/a_light_blue"
-            android:visibility="gone" />
-
+        <TextView
+            android:id="@+id/txvReply"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_below="@id/txvCommentDescription"
+            android:padding="5dp"
+            android:text="REPLY"
+            android:textColor="@color/blog.comments.follow_reply_btn"
+            android:textSize="14sp" />
     </RelativeLayout>
-</android.support.v7.widget.CardView>
+
+    <RelativeLayout
+        android:id="@+id/replyRelativeLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/relativeMainContainer"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:background="@drawable/comments_reply_bg"
+        android:visibility="gone">
+
+        <com.mikhaellopez.circularimageview.CircularImageView
+            android:id="@+id/replyUserImageView"
+            android:layout_width="34dp"
+            android:layout_height="34dp"
+            android:layout_marginBottom="5dp"
+            android:layout_marginLeft="14dp"
+            android:layout_marginRight="5dp"
+            android:layout_marginTop="5dp"
+            android:src="@drawable/default_commentor_img"
+            app:civ_border="false"
+            app:civ_shadow="true"
+            app:civ_shadow_color="@color/grey"
+            app:civ_shadow_radius="4" />
+
+        <TextView
+            android:id="@+id/replyUserNameTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_toRightOf="@+id/replyUserImageView"
+            android:text="user"
+            android:textColor="@color/black_color"
+            android:textSize="14sp" />
+
+        <TextView
+            android:id="@+id/replied"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/replyUserNameTextView"
+            android:layout_centerVertical="true"
+            android:layout_toRightOf="@+id/replyUserNameTextView"
+            android:fontFamily="sans-serif-thin"
+            android:paddingLeft="8dp"
+            android:text="Replied"
+            android:textColor="@color/black_color"
+            android:textSize="12sp" />
+
+        <TextView
+            android:id="@+id/replyCountTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:fontFamily="sans-serif-thin"
+            android:paddingRight="10dp"
+            android:text="REPLIES"
+            android:textColor="@color/black_color"
+            android:textSize="12sp" />
+    </RelativeLayout>
+
+    <View
+        android:id="@+id/dividerLine"
+        android:layout_width="match_parent"
+        android:layout_height="0.1dp"
+        android:layout_below="@+id/replyRelativeLayout"
+        android:layout_marginTop="10dp"
+        android:background="@color/grey_light"
+        android:visibility="visible" />
+
+</RelativeLayout>
