--- a/MyCity4Kids/MyCity4Kids/res/menu/aa_new_show_article.xml
+++ b/MyCity4Kids/MyCity4Kids/res/menu/aa_new_show_article.xml
@@ -3,6 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <item
+        android:id="@+id/bookmark"
+        android:icon="@drawable/share"
+        android:title="Bookmark"
+        app:showAsAction="always" />
+    <item
         android:id="@+id/share"
         android:icon="@drawable/share"
         android:title="Share"
